@@ -20,6 +20,7 @@ This version addresses the following issues:
 1014020 - Fog Linear test failed.
 1014019 - Blend test failed.
 1014018 - LogicOp Function test failed.
+1014016 - Stencil Plane Operation test failed.
 
 
 Version 0.81
